--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
 	<nav>		
 		<div class ="logo">
-			<h4>Ordering Test Site</h4>
+			<h4>Ordering Test Site </h4>
 		</div>
 		<ul class="nav-links">
-			<li> <a href="#">HOME</a></li>
-			<li> <a href="#">SHOP</a></li>
-			<li> <a href="#">ABOUT</a></li>
-			<li> <a href="#">CONTACT US</a></li>
+			<li> <a href="pages/index.html">HOME</a></li>
+			<li> <a href="shop.html">SHOP</a></li>
+			<li> <a href="about.html">ABOUT</a></li>
+			<li> <a href="contact.html">CONTACT US</a></li>
 		</ul>
+
+		
 
 	<div class="burger"></div>
 		<div class="line1"></div>
@@ -31,7 +33,11 @@
 		
 	</div>
 	</nav>
+
 	
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+	<h1>Testing 1,2,3,4,5,6,7,8</h1>
+	
+	
 </body>
 </html>
