Finalized Nav Bar
Finished spacing for NavBar

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Contact Us</title>
@@ -14,7 +13,7 @@
 <body>
 	<nav>		
 		<div class ="logo">
-			<h4>Ordering Test Site </h4>
+			<h4>Contact Us </h4>
 		</div>
 		<ul class="nav-links">
 			<li> <a href="index.html">HOME</a></li>
