--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Demi Gear</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet"> 
 
 
 </head>
@@ -20,15 +20,21 @@
 			<li> <a href="about.html">ABOUT</a></li>
 			<li> <a href="contact.html">CONTACT US</a></li>
 		</ul>
-
-		
-
-
 	</nav>
 
 	
 
-	<h1>Testing 1,2,3,4,5,6,7,8</h1>
+	<div class="app-text">
+
+		<h1>Learn to start and scale your Business from start to finish</h1>
+		<br>
+			<p>Do you have a skill or hobby that you would like to start a business with?  Do you want to teach others the skills by way <br>of monetized courses?  
+				Learn to become an Entrepreneur or just hone in on that Entrepreneurial mindset.  Read Below for more.</p>
+	</div>
+
+	<div class="app-picture">
+		<img src="Dbrooks Logo 90px.png"
+	</div>
 	
 	
 </body>
